--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/KusaReMKN/mknmesg/issues"
   },
-  "homepage": "https://github.com/KusaReMKN/mknmesg#readme"
+  "homepage": "https://github.com/KusaReMKN/mknmesg#readme",
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
+  }
 }
