--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/KusaReMKN/mknmesg#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
