--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/KusaReMKN/mknmesg#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.0.0",
     "@types/sqlite3": "^3.1.8",
     "ts-node": "^10.8.1",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "markdown-it": "^13.0.1",
     "sqlite3": "^5.0.8"
   }
 }
