--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "highlight.js": "^11.5.1",
     "markdown-it": "^13.0.1",
     "sqlite3": "^5.0.8"
   }
