--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@types/ejs": "^3.1.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "highlight.js": "^11.5.1",
     "markdown-it": "^13.0.1",
