--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.13",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.0.0",
+    "@types/sass": "^1.43.1",
     "@types/sqlite3": "^3.1.8",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
@@ -30,6 +31,7 @@
     "express": "^4.18.1",
     "highlight.js": "^11.5.1",
     "markdown-it": "^13.0.1",
+    "sass": "^1.52.3",
     "sqlite3": "^5.0.8"
   }
 }
