--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@exampledev/new.css": "^1.1.3",
     "@types/ejs": "^3.1.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
