--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx ts-node src/build.ts",
+    "start": "npx ts-node src/build.ts && npx ts-node src/start.ts"
   },
   "repository": {
     "type": "git",
